deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-motopay-ns
  labels:
    name: staging-motopay-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: euphoria-service-deployment
  namespace: staging-motopay-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: euphoria-service
  template:
    metadata:
      labels:
        app: euphoria-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: euphoria-service
        image: swr.af-south-1.myhuaweicloud.com/moto/euphoria-service:15a8d16cacb23ad3b87debb80e5c3c962ad9e3ee
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
      imagePullSecrets:
      - name: default-secret
---
apiVersion: v1
kind: Service
metadata:
  name: euphoria-service
  namespace: staging-motopay-ns
spec:
  type: NodePort # Change service type to NodePort
  selector:
    app: euphoria-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    #nodePort: 30617 # Define a specific nodePort value (replace with desired port number)

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: euphoria-ingress
 namespace: staging-motopay-ns
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - www.euphoriang.com
   secretName: euphoriaa
 rules:
 - host: www.euphoriang.com
   http:
     paths:
     - pathType: Prefix
       path: /
       backend:
         service:
           name: euphoria-service
           port:
             number: 3000
